add auth page section

--- a/public/index.html
+++ b/public/index.html
@@ -73,10 +73,12 @@
     <div class="mt-5">
       <!-- Preview section -->
       <b>Test remote auth:</b>    
-        <p>      click on the room link below to join the hivetalk room</p>
+        <p>      click on the room link below to auth</p>
         <!-- Submit button -->
-        <button id="sendButton" onclick="handleButtonClick()">Join Hive Room</button>
+        <button id="sendButton" onclick="handleButtonClick()">Auth NIP98</button>
     </div>
+
+    <div id="protected"></div>
 
   </main>
 
