change to basic message

--- a/public/index.html
+++ b/public/index.html
@@ -67,14 +67,18 @@
       <p id="npub"></p>
     </div>
 
-    <div class="mt-5">
+    <div class="mt-5 mb-8">
       <b>Test remote auth:</b>    
-        <p>      click on the room link below to auth</p>
+        <p>      click on the link below to auth</p>
         <!-- Submit button -->
         <button id="sendButton" onclick="handleButtonClick()">Auth NIP98</button>
     </div>
 
-    <div id="protected"></div>
+    </main>
+    <main class="container" id="protected-container">
+    <div class="flex mb-8 mt-10">
+      <p id="protected"></p>
+    </div>
 
   </main>
 
