get rid of ded code, comment

--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,8 @@
 
     <div class="mt-5 mb-8">
       <b>Test remote auth:</b>    
-        <p> click on the link below to auth</p>
+        <p> click on the link below to remote auth nostr userto another another server
+        </p>
         <!-- Submit button -->
         <button id="sendButton" onclick="handleButtonClick()">Auth NIP98</button>
     </div>
