--- a/public/index.html
+++ b/public/index.html
@@ -103,7 +103,7 @@
             <a href="/">Home</a>
           </li>
           <li>
-            <a href="https://github.com/bitkarrot/NIP98-js-client>">Github</a>
+            <a href="https://github.com/bitkarrot/NIP98-js-client">Github</a>
           </li>
         </ul>
       </nav>
