--- a/public/relay.html
+++ b/public/relay.html
@@ -62,14 +62,11 @@
     <ul id="relayList"></ul>
 
     <button onclick="deleteSelected()">Delete Selected</button>
-
     <hr />
     <main class="container-fluid">
         <div>
-            Go <a href="/"><button class="secondary"> Post a Note </button></a>
+            Go <a href="/"><button class="secondary"> Home </button></a>
         </div>
     </main>
-
 </body>
-
 </html>
